--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "utils-date",
   "version": "0.0.3",
   "description": "tiny and useful functions about date for frontend, written in typescript",
+  "main": "lib/index.js",
   "browser": "lib/index.mjs",
-  "types": "lib/index.d.mts",
+  "types": "lib/index.d.ts",
   "scripts": {
     "prepare": "husky install",
     "build": "tsup",
@@ -36,21 +37,20 @@
   "author": "cirolee<ciromail@126.com>",
   "license": "MIT",
   "devDependencies": {
-    "@commitlint/config-conventional": "^18.4.4",
-    "@types/jest": "^29.5.11",
-    "@types/node": "^20.11.5",
-    "@typescript-eslint/eslint-plugin": "^6.19.0",
-    "@typescript-eslint/parser": "^6.19.0",
-    "commitlint": "^18.4.4",
-    "eslint": "^8.56.0",
+    "@commitlint/config-conventional": "^18.6.3",
+    "@types/jest": "^29.5.13",
+    "@types/node": "^20.16.5",
+    "@typescript-eslint/eslint-plugin": "^8.6.0",
+    "@typescript-eslint/parser": "^8.6.0",
+    "commitlint": "^18.6.1",
+    "eslint": "8.56.0",
     "husky": "^8.0.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "lint-staged": "^15.2.0",
-    "prettier": "^3.2.4",
-    "ts-jest": "^29.1.1",
-    "tsup": "^8.0.1",
-    "typescript": "^5.3.3",
-    "vitepress": "1.0.0-rc.39"
+    "lint-staged": "^15.2.10",
+    "prettier": "^3.3.3",
+    "ts-jest": "^29.2.5",
+    "tsup": "^8.3.0",
+    "typescript": "^5.6.2"
   }
 }
